# OOP

./: .gitignore
lab_0_b/: CMakeLists.txt  main.cpp
lab_0_b/models/: entity.cpp  entity.h  entityListBuilder.cpp  entityListBuilder.h
lab_0_b/resources/: a.txt
lab_1/: BitArray.cpp  BitArray.h  BitArrayChecks.cpp  BitArrayConstructors.cpp  BitArrayManipulation.cpp  BitArrayOperators.cpp  BitArraySetters.cpp  CMakeLists.txt  TwoBitArray.cpp  main.cpp
lab_2/: CMakeLists.txt  Cell.cpp  Cell.h  Field.cpp  Field.h  Life.cpp  Life.h  main.cpp
